feat: qtsbe health
